# kchess

./: Cargo.toml
src/: board.rs  components.rs  id.rs  lib.rs  pieces.rs  side.rs  space.rs
src/board/: dimensions.rs
src/components/: macros.rs  mod.rs  piece.rs  piece_mut.rs  side.rs
src/direction/: array.rs  boxed.rs  cardinal.rs  diagonal.rs  mod.rs  ray.rs  relative.rs  slice.rs  step.rs
src/direction/cardinal/tests/: macros.rs
src/direction/diagonal/tests/: macros.rs
src/direction/ray/: builder.rs  cast.rs  mod.rs  set.rs
src/direction/ray/set/: builder.rs  mod.rs
src/game/: context.rs  mod.rs  piece.rs  pieces.rs  side.rs  space.rs
src/game/components/: macros.rs  mod.rs  piece.rs  piece_mut.rs  side.rs
src/pieces/: bishop.rs  component.rs  fairy.rs  king.rs  knight.rs  mod.rs  pawn.rs  primitive.rs  queen.rs  rook.rs  set.rs  standard.rs  stats.rs
src/pieces/component/: builder.rs
src/pieces/fairy/: amazon.rs  common_king.rs  knook.rs  nightrider.rs  royal_queen.rs
src/pieces/standard/: bishop.rs  king.rs  knight.rs  pawn.rs  queen.rs  rook.rs
