[package]
name = "kchess"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = { version = "0.8.5", optional = true, default-features = false }
smallvec = { version = "1.13.2", optional = true }

[features]
default = []
rand = ["dep:rand"]
rand_full = ["rand", "rand/std", "rand/std_rng"]
smallvec = ["dep:smallvec"]

[dev-dependencies]
paste = "1.0.15"
